# MIWOS

./: .env.example  .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
MIWOS/: config.py  db.py  migration.py  model.py  relation.py
MIWOS/libs/: word_formatter.py
MIWOS/libs/exceptions/: MIWOS_exception.py  locked_model_exception.py  not_found_exception.py  unsupported_data_type_exception.py  unsupported_database_connector_exception.py  validation_exception.py
MIWOS/libs/sql/: association.py  mariadb.py  migration.py  mysql.py  select.py  sqlite.py
MIWOS/libs/sql/querycolumn/: column.py  mariadb.py  mysql.py  sqlite.py
MIWOS/libs/sql/querycolumn/enum/: data_type.py
MIWOS/libs/sql/queryexecutor/: mysql.py  sqlite.py
MIWOS/libs/sql/querygenerator/: mariadb.py  mysql.py  sqlite.py
example/: .gitignore  db_management.py  main.py
example/db/: bootstrap.py
example/db/migrations/: 0001_create_user.py  0002_create_message.py  0003_create_channel.py
example/model/: channel.py  message.py  user.py
tests/: db_test.py  helper.py  migration_test.py  model_test.py  select_test.py  setup_test.py
tests/migrations/: 0001_sample_data.py  0002_second_sample_data.py
